@@ -1725,28 +1725,6 @@ name|method
 operator|.
 name|equals
 argument_list|(
-literal|"uif"
-argument_list|)
-operator|&&
-name|params
-operator|.
-name|get
-argument_list|(
-literal|"facet.prefix"
-argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
-continue|continue;
-comment|// it's not supported there
-block|}
-if|if
-condition|(
-name|method
-operator|.
-name|equals
-argument_list|(
 literal|"dv"
 argument_list|)
 condition|)
