@@ -2311,16 +2311,8 @@ condition|(
 name|prefix
 operator|==
 literal|null
-operator|||
-literal|"uif"
-operator|.
-name|equals
-argument_list|(
-name|method
-argument_list|)
 condition|)
 block|{
-comment|// there is no support
 name|params
 operator|.
 name|remove
@@ -8507,62 +8499,6 @@ literal|"fcs"
 argument_list|)
 expr_stmt|;
 comment|// specific number of threads
-block|}
-comment|/** no prefix for uif */
-annotation|@
-name|Test
-argument_list|(
-name|expected
-operator|=
-name|RuntimeException
-operator|.
-name|class
-argument_list|)
-DECL|method|testNOFacetPrefixForUif
-specifier|public
-name|void
-name|testNOFacetPrefixForUif
-parameter_list|()
-block|{
-if|if
-condition|(
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
-condition|)
-block|{
-name|doFacetPrefix
-argument_list|(
-literal|"tt_s1"
-argument_list|,
-literal|null
-argument_list|,
-literal|""
-argument_list|,
-literal|"facet.method"
-argument_list|,
-literal|"uif"
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|doFacetPrefix
-argument_list|(
-literal|"t_s"
-argument_list|,
-literal|null
-argument_list|,
-literal|""
-argument_list|,
-literal|"facet.method"
-argument_list|,
-literal|"uif"
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 annotation|@
 name|Test
